# Backtest_POO

./: Example.ipynb  LICENSE  README.md  pyproject.toml  run_test.py  test_backtest.py
backtest/: __init__.py  backtest.py  result.py  strategy.py
example/: Example.ipynb  backtest_usage_example.ipynb  strategy_examples
example/utils/: Cac40.csv  FamaFrenchFactors.csv  PER.csv
tests/: strategy_to_be_tested.py  test_CreationStrategy.py  test_result.py
